--- a/Snake Game Documentation.html
+++ b/Snake Game Documentation.html
@@ -1,2 +1,40 @@
-<div>Snake Game</div> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Python Snake Game</title>
+
+    <style>
+        .text1{
+            color: rgb(106, 106, 255);
+            font-size: 20px;
+            font-family: 'Arial', Courier, monospace;
+            font-weight: bold;
+        }
+
+        .text2{
+            color:rgb(0, 0, 0);
+            font-size: 16px;
+            font-family: 'Arial', Courier, monospace;
+        }
+
+        hr.hr1{
+            border: 2px;
+            border-top: 2px solid rgb(81, 81, 238);
+            margin: auto;
+        }
+
+    </style>
+
+</head>
+<body>
+    <div class="text1"> Python Snake Game </div>    
+    <hr class="hr1">
+    <div class="text2"> hello </div>
+    <img src="" alt="Italian Trulli">
+
+</body>
+</html>
 
