added images for HTML

--- a/Snake Game Documentation.html
+++ b/Snake Game Documentation.html
@@ -33,7 +33,7 @@
     <div class="text1"> Python Snake Game </div>    
     <hr class="hr1">
     <div class="text2"> hello </div>
-    <img src="" alt="Italian Trulli">
+    <img src="snake-in-python-repo\html_doc_images\Snake Screenshot.png" alt="Game Image" width="500">
 
 </body>
 </html>
