Changed the html doc

--- a/Snake Game Documentation.html
+++ b/Snake Game Documentation.html
@@ -6,9 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Python Snake Game</title>
 
+    <!-- Saved RGB Values: rgb(106, 106, 255) -->
+
     <style>
+
+        .center{
+            color: rgb(0, 0, 0);
+            font-family: 'Arial', Courier, monospace;
+            font-weight: bold;
+            font-size: 20px;
+            margin: auto;
+            width: 28%;
+            padding: 10px;
+        }
+
         .text1{
-            color: rgb(106, 106, 255);
+            color: rgb(0, 0, 0);
             font-size: 20px;
             font-family: 'Arial', Courier, monospace;
             font-weight: bold;
@@ -22,7 +35,13 @@
 
         hr.hr1{
             border: 2px;
-            border-top: 2px solid rgb(81, 81, 238);
+            border-top: 2px solid rgb(0, 0, 0);
+            margin-top: 5px;
+            margin-bottom: 1px;
+        }
+
+        .imageborder{
+            border: 3px solid rgb(19, 19, 26);
             margin: auto;
         }
 
@@ -30,10 +49,20 @@
 
 </head>
 <body>
-    <div class="text1"> Python Snake Game </div>    
+    <div class="center"> Python Snake Game </div>    
     <hr class="hr1">
-    <div class="text2"> hello </div>
-    <img src="snake-in-python-repo\html_doc_images\Snake Screenshot.png" alt="Game Image" width="500">
+    <div class="text2">
+        <br> Author: Schuyler Good <br>
+        Date:2/27/2022 <br> <br>
+    </div>
+    <hr class="hr1">
+    <div class="text2">
+        This is the information page for the Python Snake Game <br>
+        <br>
+        
+    </div>
+
+    <img src="html_doc_images\Snake Screenshot.png" width=500 alt="Game Image">
 
 </body>
 </html>
